--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "https://AmeenAhmed@bitbucket.org/razorflow/rfjs.git"
   },
   "dependencies": {
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "ejs": "~0.8.5"
   },
   "devDependencies": {
     "grunt": "~0.4.2"
