--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "~0.8.5"
   },
   "devDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-contrib-requirejs": "~0.4.1"
   }
 }
