--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "grunt-contrib-watch": "*",
     "grunt-contrib-jshint": "~0.4.0",
     "grunt-contrib-less": ">= 0.1",
-    "intern": "~1.4.0",
     "grunt-karma": "~0.6.2",
     "karma-chrome-launcher": "~0.1.2",
     "karma-script-launcher": "~0.1.0",
@@ -32,6 +31,8 @@
     "karma-requirejs": "~0.2.1",
     "karma-coffee-preprocessor": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.2",
-    "karma": "~0.10.9"
+    "karma": "~0.10.9",
+    "karma-coverage": "~0.2.0",
+    "karma-safari-launcher": "~0.1.1"
   }
 }
