--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-phantomjs-launcher": "~0.1.2",
     "karma": "~0.10.9",
     "karma-coverage": "~0.2.0",
-    "karma-safari-launcher": "~0.1.1"
+    "karma-safari-launcher": "~0.1.1",
+    "grunt-shell": "~0.6.4"
   }
 }
