--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "express": "~3.4.8",
-    "ejs": "~0.8.5"
+    "ejs": "~0.8.5",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
