--- a/.arcconfig
+++ b/.arcconfig
@@ -4,6 +4,7 @@
 	"load": [
 	"tools/src/arcanist"
 	],
-	"lint.engine": "RazorFlowLintEngine"
+	"lint.engine": "RazorFlowLintEngine",
+	"lint.jshint.config": "src/js/.jshintrc"
 
 }
