--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tools/razordoc"]
 	path = tools/razordoc
-	url = git://github.com/RazorFlow/razordoc.git
+	url = https://github.com/RazorFlow/razordoc.git
