--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "karma": "~0.10.9",
     "karma-coverage": "~0.2.0",
     "karma-safari-launcher": "~0.1.1",
-    "grunt-shell": "~0.6.4"
+    "grunt-shell": "~0.6.4",
+    "lodash-cli": "~2.4.1",
+    "grunt-lodash": "~0.3.0"
   }
 }
