added a build task

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-safari-launcher": "~0.1.1",
     "grunt-shell": "~0.6.4",
     "lodash-cli": "~2.4.1",
-    "grunt-lodash": "~0.3.0"
+    "grunt-lodash": "~0.3.0",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
