--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-shell": "~0.6.4",
     "lodash-cli": "~2.4.1",
     "grunt-lodash": "~0.3.0",
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt-contrib-copy": "^0.5.0",
+    "url-to-screenshot": "^0.4.1"
   }
 }
