--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash-cli": "~2.4.1",
     "grunt-lodash": "~0.3.0",
     "grunt-contrib-copy": "^0.5.0",
-    "url-to-screenshot": "^0.4.1"
+    "url-to-screenshot": "^0.4.1",
+    "glob": "^3.2.9"
   }
 }
