--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-lodash": "~0.3.0",
     "grunt-contrib-copy": "^0.5.0",
     "url-to-screenshot": "^0.4.1",
-    "glob": "^3.2.9"
+    "glob": "^3.2.9",
+    "grunt-text-replace": "^0.3.11"
   }
 }
