--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Documentation for RazorFlow Dashboard Framework",
   "dependencies": {},
   "devDependencies": {
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-shell": "^0.6.4"
   }
 }
