Package.json was giving an error

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "underscore": "~1.5.2",
     "ejs": "~0.8.5",
     "mkdirp": "~0.3.5",
-    "marked": "~0.3.0",
-    
+    "marked": "~0.3.0"
   }
 }
