--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ razorflow.css
 src/package
 src/package/css/razorflow.min.css
 src/package/dashboard_quickstart/css/razorflow.min.css
+src/js/generated/
