--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "rfjs",
   "version": "0.2.0",
   "description": "RazorFlow Dashboard Framework - JavaScript Edition",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://AmeenAhmed@bitbucket.org/razorflow/rfjs.git"
@@ -36,6 +35,7 @@
     "grunt-lodash": "~0.3.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-text-replace": "^0.3.11",
-    "grunt-contrib-cssmin": "~0.9.0"
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-clean": "^0.5.0"
   }
 }
