--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "url-to-screenshot": "^0.4.1",
     "glob": "^3.2.9",
-    "grunt-text-replace": "^0.3.11"
+    "grunt-text-replace": "^0.3.11",
+    "grunt-contrib-clean": "^0.5.0"
   }
 }
