--- a/internal/package.json
+++ b/internal/package.json
@@ -9,6 +9,7 @@
     "url-to-screenshot": "^0.4.1",
     "glob": "^3.2.9",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-saucelabs": "^5.1.1"
+    "grunt-saucelabs": "^5.1.1",
+    "grunt-contrib-jasmine": "^0.6.3"
   }
 }
