--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/package
 src/package/css/razorflow.min.css
 src/package/dashboard_quickstart/css/razorflow.min.css
 src/js/generated/
+src/js/razorcharts/
