--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
 	"name": "razorflow/newsite",
 	"require": {
-		"kriswallsmith/assetic": "*"
-	},
+		"kriswallsmith/assetic": "*",
+		"guzzlehttp/guzzle": "4.*"
+
+	}
 }
