--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ src/package/css/razorflow.min.css
 src/package/dashboard_quickstart/css/razorflow.min.css
 src/js/generated/
 src/js/razorcharts/
+src/dev/themebuilder/vendor/less/
+src/dev/themebuilder/vendor/
