--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,5 @@ src/package
 src/package/css/razorflow.min.css
 src/package/dashboard_quickstart/css/razorflow.min.css
 src/js/generated/
-src/js/razorcharts/
-src/dev/themebuilder/vendor/less/
-src/dev/themebuilder/vendor/
+src/js/razorcharts
+src/dev/themebuilder/vendor
