removed themebuilder folder and added it into gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ src/package/css/razorflow.min.css
 src/package/dashboard_quickstart/css/razorflow.min.css
 src/js/generated/
 src/js/razorcharts/
+src/dev/themebuilder/
