--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-text-replace": "^0.3.11",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-tasks": "~0.1.3"
   }
 }
