enable custom items

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@
 
     RewriteEngine On
     #RewriteBase /path/to/app
+    RewriteCond %{REQUEST_URI} !^/app
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [QSA,L]
 </IfModule>
