--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-text-replace": "^0.3.11",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-tasks": "~0.1.3"
+    "grunt-tasks": "~0.1.3",
+    "grunt-contrib-concat": "~0.4.0"
   }
 }
