--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.2.0",
   "description": "RazorFlow Main Repo",
   "dependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jst": "^0.6.0",
+    "grunt-contrib-requirejs": "^0.4.4"
   }
 }
