--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "RazorFlow Main Repo",
   "dependencies": {
+    "chalk": "^0.5.1",
     "fs-extra": "^0.11.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.5.0",
@@ -13,6 +14,8 @@
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-copy-to": "0.0.10",
     "grunt-exec": "^0.4.6",
+    "grunt-lib-contrib": "^0.7.1",
+    "lodash": "^2.4.1",
     "underscore": "^1.6.0"
   }
 }
