--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-copy-to": "0.0.10",
     "grunt-exec": "^0.4.6",
+    "grunt-file-append": "0.0.4",
+    "grunt-file-creator": "^0.1.1",
     "grunt-lib-contrib": "^0.7.1",
     "lodash": "^2.4.1",
     "underscore": "^1.6.0",
