--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-lib-contrib": "^0.7.1",
     "lodash": "^2.4.1",
     "underscore": "^1.6.0",
-    "url-to-screenshot": "^0.4.1"
+    "url-to-screenshot": "^0.4.1",
+    "ejs": "^1.0.0"
   }
 }
