--- a/tools/razordoc/package.json
+++ b/tools/razordoc/package.json
@@ -1,28 +1,21 @@
 {
   "name": "razordoc",
-  "version": "0.0.0",
-  "description": "RazorDoc generates documentation for projects that usually involve code. It generates 2 types of documentation:",
-  "bin": {
-    "razordoc": "./bin/app.js"
-  },
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/RazorFlow/razordoc.git"
-  },
-  "author": "",
-  "license": "BSD",
-  "bugs": {
-    "url": "https://github.com/RazorFlow/razordoc/issues"
-  },
+  "author": "Ameen Ahmed",
+  "license": "MIT",
   "dependencies": {
-    "optimist": "0.6.0",
-    "winston": "~0.7.2",
-    "underscore": "~1.5.2",
-    "ejs": "~0.8.5",
-    "mkdirp": "~0.3.5",
-    "marked": "~0.3.0"
+    "ejs": "^1.0.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-express-server": "^0.4.19",
+    "grunt-shell": "^0.7.0",
+    "marked": "^0.3.2",
+    "mkdirp": "^0.5.0",
+    "underscore": "^1.6.0"
   }
 }
