--- a/docs/package.json
+++ b/docs/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "razorflow_docs",
-  "version": "0.0.0",
-  "description": "Documentation for RazorFlow Dashboard Framework",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-shell": "^0.6.4"
+  "name": "docs",
+  "version": "1.0.0",
+  "description": "RazorFlow Dashboard Framework Documentation ===========================================",
+  "main": "Gruntfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6",
+    "grunt-shell": "^1.0.1",
+    "mkdirp": "^0.5.0"
   }
 }
